[gd_scene load_steps=13 format=3 uid="uid://hee6yggaco67"]

[ext_resource type="Script" path="res://Main.gd" id="1_t545i"]
[ext_resource type="PackedScene" uid="uid://gnf7vlib6w2j" path="res://game/MessageBox.tscn" id="2_o1ffh"]
[ext_resource type="Script" path="res://tapestry/TapGame.gd" id="2_t32m6"]
[ext_resource type="Script" path="res://controls/AViewGroup.gd" id="3_4wxdg"]
[ext_resource type="Script" path="res://controls/AViewScene.gd" id="4_8q3vp"]
[ext_resource type="PackedScene" uid="uid://cbibqgabx76rm" path="res://views/Foyer.tscn" id="6_3yuk4"]
[ext_resource type="PackedScene" uid="uid://dt8amcoawi80a" path="res://views/CloakRoom.tscn" id="7_iqq02"]
[ext_resource type="Script" path="res://game/BannerScore.gd" id="8_ctx8a"]
[ext_resource type="PackedScene" uid="uid://cf4r8oyshoyxa" path="res://views/Bar.tscn" id="8_oive7"]
[ext_resource type="Script" path="res://game/GameView.gd" id="9_wypj6"]
[ext_resource type="Script" path="res://controls/ObjectTree.gd" id="10_4rgo2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x27bm"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t545i")
story_name = "cloak"
message_box = ExtResource("2_o1ffh")

[node name="TapGame" type="Node" parent="."]
script = ExtResource("2_t32m6")

[node name="SceneViews" type="Node" parent="TapGame" node_paths=PackedStringArray("view_target")]
script = ExtResource("3_4wxdg")
view_target = NodePath("../../controls/VBoxContainer/GameView")

[node name="foyer of the opera house" type="Node" parent="TapGame/SceneViews"]
script = ExtResource("4_8q3vp")
scene = ExtResource("6_3yuk4")

[node name="cloakroom" type="Node" parent="TapGame/SceneViews"]
script = ExtResource("4_8q3vp")
scene = ExtResource("7_iqq02")

[node name="bar" type="Node" parent="TapGame/SceneViews"]
script = ExtResource("4_8q3vp")
scene = ExtResource("8_oive7")

[node name="controls" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="margin" type="Control" parent="controls"]
custom_minimum_size = Vector2(3, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="controls"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
mouse_filter = 2
theme_override_constants/separation = 5

[node name="top bar" type="ColorRect" parent="controls/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="left" type="Label" parent="controls/VBoxContainer/top bar"]
layout_mode = 1
offset_left = 3.0
offset_right = 65.0
offset_bottom = 26.0

[node name="center" type="Label" parent="controls/VBoxContainer/top bar"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -43.0
offset_right = 43.0
offset_bottom = 26.0
grow_horizontal = 2
text = "center side"
horizontal_alignment = 1

[node name="right" type="Label" parent="controls/VBoxContainer/top bar"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -73.0
offset_bottom = 26.0
grow_horizontal = 0
pivot_offset = Vector2(-3, 0)
horizontal_alignment = 2
script = ExtResource("8_ctx8a")

[node name="GameView" type="ColorRect" parent="controls/VBoxContainer" node_paths=PackedStringArray("tap_game")]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0.47451, 0.376471, 1)
script = ExtResource("9_wypj6")
tap_game = NodePath("../../../TapGame")

[node name="TextView" type="Control" parent="controls/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextBackground" type="ColorRect" parent="controls/VBoxContainer/TextView"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.180392, 0.180392, 0.180392, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="controls/VBoxContainer/TextView"]
layout_mode = 2
offset_right = 855.0
offset_bottom = 285.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="controls/VBoxContainer/TextView/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="TextOutput" type="RichTextLabel" parent="controls/VBoxContainer/TextView/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10
focus_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_x27bm")
fit_content = true
scroll_active = false
selection_enabled = true

[node name="TextInput" type="LineEdit" parent="controls/VBoxContainer"]
layout_mode = 2
caret_blink = true

[node name="margin" type="Control" parent="controls/VBoxContainer"]
custom_minimum_size = Vector2(0, 3)
layout_mode = 2

[node name="ObjectTree" type="Tree" parent="controls"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("10_4rgo2")

[connection signal="location_changed" from="." to="controls/VBoxContainer/top bar/left" method="set_text"]
[connection signal="narration_changed" from="." to="controls/VBoxContainer/TextView/ScrollContainer/MarginContainer/TextOutput" method="append_text"]
[connection signal="root_changed" from="." to="TapGame/SceneViews" method="_on_main_root_changed"]
[connection signal="root_changed" from="." to="controls/ObjectTree" method="_on_main_root_changed"]
[connection signal="score_changed" from="." to="controls/VBoxContainer/top bar/right" method="set_score"]
[connection signal="title_changed" from="." to="controls/VBoxContainer/top bar/center" method="set_text"]
[connection signal="turns_changed" from="." to="controls/VBoxContainer/top bar/right" method="set_turns"]
[connection signal="ready" from="controls/VBoxContainer/TextInput" to="controls/VBoxContainer/TextInput" method="grab_focus"]
[connection signal="text_submitted" from="controls/VBoxContainer/TextInput" to="." method="_on_text_input"]
[connection signal="text_submitted" from="controls/VBoxContainer/TextInput" to="controls/VBoxContainer/TextInput" method="clear" unbinds=1]
